added code to HTML file

--- a/index.html
+++ b/index.html
@@ -12,7 +12,34 @@
       <img src="./assets/bowtie-cat.png" alt="Profile image of cat wearing a bow tie." />
     </header>
     <main>
-      <!-- Student code goes here -->
+      <section class="card" id="html-section">
+        <h2>HTML</h2>
+        <ul>
+          <li>Enter your HTML notes here</li>
+          <li>Learning is interesting</li>
+          <li> The head element contains information about the webpage</li>
+          <li>The body element represents the visible content shown to the user. </li>
+        </ul>
+      </section>
+   
+      <section class="card" id="css-section">
+        <h2>CSS</h2>
+          <ul></ul>
+          <li>CSS elements relates to the colour within the webpage</li>
+          </ul>
+      </section>
+
+      <section class="card" id="git-section">
+        <h2>GIT</h2>
+        <ul></ul>
+        <li> Git commands i've learnt so far include check, status, push, pull</li>
+      </section>
+   
+      <section class="card" id="javascript-section">
+        <h2>Javascript</h2>
+        <ul></ul>
+        <li> is used to add interactivity within a website i.e a pop-up message or dropdown menu</li>
+      </section> <!-- Student code goes here -->
     </main>
 
     <footer>
