added CSS to project

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./assets/style.css">
     <title>Prework Study Guide</title>
   </head>
   <body>
@@ -24,21 +25,30 @@
    
       <section class="card" id="css-section">
         <h2>CSS</h2>
-          <ul></ul>
+          <ul>
           <li>CSS elements relates to the colour within the webpage</li>
           </ul>
       </section>
 
       <section class="card" id="git-section">
         <h2>GIT</h2>
-        <ul></ul>
-        <li> Git commands i've learnt so far include check, status, push, pull</li>
+        <ul>
+          <li>Git commands i've learnt so far include check, status, push, pull</li>
+        </ul>
       </section>
    
       <section class="card" id="javascript-section">
         <h2>Javascript</h2>
-        <ul></ul>
-        <li> is used to add interactivity within a website i.e a pop-up message or dropdown menu</li>
+        <ul>
+        <li> Javascript is used to add interactivity within a website i.e a pop-up message or dropdown menu</li>
+      </ul>
+
+      <section class="card" id="Class-Attributes">
+        <h2>Class</h2>
+        <ul>
+        <li>A  margin indicates pace we want outside the element</li>
+        </ul>
+      </section>
       </section> <!-- Student code goes here -->
     </main>
 
