--- a/index.html
+++ b/index.html
@@ -1,19 +1,57 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Prework Study Guide</title>
-  </head>
-  <body>
+     <meta charset="UTF-8" />
+     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+     <link rel="stylesheet" href="./assets/style.css">
+     <title>Prework Study Guide</title>
+   </head>
+   <body>
+
     <header id="top">
       <h1>Prework Study Guide</h1>
       <img src="./assets/bowtie-cat.png" alt="Profile image of cat wearing a bow tie." />
     </header>
     <main>
-      <!-- Student code goes here -->
-    </main>
+      <section class="card" id="html-section">
+        <h2>HTML</h2>
+        <ul>
+          <li>Enter your HTML notes here</li>
+          <li>Learning is interesting</li>
+          <li> The head element contains information about the webpage</li>
+          <li>The body element represents the visible content shown to the user. </li>
+        </ul>
+      </section>
+       <section class="card" id="css-section">
+         <h2>CSS</h2>
+           <ul>
+           <li>CSS elements relates to the colour within the webpage</li>
+           </ul>
+       </section>
+
+       <section class="card" id="git-section">
+         <h2>GIT</h2>
+         <ul>
+         <li> Git commands i've learnt so far include check, status, push, pull</li>
+         <ul>
+
+       </section>
+
+       <section class="card" id="javascript-section">
+         <h2>Javascript</h2>
+         <ul>
+         <li> Javascript is used to add interactivity within a website i.e a pop-up message or dropdown menu</li>
+       </ul>
+      </section>
+       <section class="card" id="Class-Attributes">
+         <h2>Class</h2>
+         <ul>
+         <li>A  margin indicates pace we want outside the element</li>
+         </ul>
+       </section>
+       </section> <!-- Student code goes here -->
+     </main>
 
     <footer>
       <p>I can code!</p>
