--- a/index.html
+++ b/index.html
@@ -43,6 +43,10 @@
          <h2>Javascript</h2>
          <ul>
          <li> Javascript is used to add interactivity within a website i.e a pop-up message or dropdown menu</li>
+          <li>A variable is a named container that allows us to store data in our code.</li>
+          <li>Control flow is the order in which a computer executes code in a script.</li>
+     
+
        </ul>
       </section>
        <section class="card" id="Class-Attributes">
