--- a/index.html
+++ b/index.html
@@ -45,16 +45,17 @@
          <h2>Javascript</h2>
          <ul>
          <li> Javascript is used to add interactivity within a website i.e a pop-up message or dropdown menu</li>
-          <li>A variable is a named container that allows us to store data in our code.</li>
-          <li>Control flow is the order in which a computer executes code in a script.</li>
+         <li> A variable is a named container that allows us to store data in our code.</li>
+         <li> Control flow is the order in which a computer executes code in a script.</li>
        </ul>  
 
       <section class="card" id="Class-Attributes">
         <h2>Class</h2>
         <ul>
-        <li>A  margin indicates pace we want outside the element</li>
+        <li> A  margin determines the amount of space we want outside the element</li>
         </ul>
       </section>
+         
       </section> <!-- Student code goes here -->
     </main>
 
